# qBitTorrent

./: .env.example  .gitignore  .gitleaks.toml  .semgrep.yml  .snyk  .trivyignore  .trivyignore.yaml  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  FINAL_STATUS.md  FIXES_SUMMARY.md  FORK_SUMMARY.md  ISSUES_AND_TODOS.md  PLUGIN_STATUS.md  README.md  ci.sh  docker-compose.quality.yml  docker-compose.yml  docker-compose.yml.bak.20260425-143656  fix-qbit-password.sh  fix_all_downloads.py  fix_comprehensive.sh  init-qbit-password.sh  install-plugin.sh  mkdocs.yml  plugin_update_report.json  pyproject.toml  ruff.toml  run-all-tests.sh  setup-webui-bridge-service.sh  setup.sh  sonar-project.properties  start-proxy.sh  start.sh  stop.sh  test-all.sh  (+8 more)
.github/workflows/: docs.yml  integration.yml  nightly.yml  security.yml  syntax.yml  test.yml  unit.yml
.github/workflows-disabled/: DO_NOT_ENABLE.md  README.md  docs.yml  security.yml  syntax.yml  unit.yml
.specify/: README.md  feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
Upstreams/: GitHub.sh  README.md
challenges/scripts/: boba_db_file_perms_challenge.sh  cred_roundtrip_challenge.sh  credential_leak_grep_challenge.sh  env_db_drift_challenge.sh  envfile_bindmount_atomic_challenge.sh  host_no_auto_poweroff_challenge.sh  iptorrents_cookie_flow_challenge.sh  jackett_autoconfig_clean_slate.sh  master_key_autogen_challenge.sh  nnmclub_native_plugin_clarification_challenge.sh  run_all_challenges.sh
config/: README.md
config/download-proxy/: requirements.txt
config/merge-service/: data-model.yaml  hooks.yaml  log_event.sh  scheduling.json
config/qBittorrent/: qBittorrent.conf
courses/: README.md
courses/01-operator/: README.md  demo.cast  demo.sh  script.md
courses/02-plugin-author/: README.md  demo.cast  demo.sh  script.md
courses/03-contributor/: README.md  demo.cast  demo.sh  script.md
courses/04-security-ops/: README.md  demo.cast  demo.sh  script.md
docs/: BOBA_DATABASE.md  COMPLETION_STATUS.md  CONCURRENCY.md  CONSTITUTION_ADDENDUM_QUALITY.md  COVERAGE_BASELINE.md  CROSS_APP_THEME_PLAN.md  DATA_MODEL.md  DEAD_TRACKERS_EXPLAINED.md  DESIGN_SYSTEM.md  DOWNLOAD_FIX.md  JACKETT_INTEGRATION.md  MAGNET_LINKS.md  MERGE_SEARCH_DIAGNOSTICS.md  OBSERVABILITY.md  OUT_OF_SANDBOX.md  PERFORMANCE.md  PLUGINS.md  PLUGIN_AUDIT.md  PLUGIN_TROUBLESHOOTING.md  QUALITY_STACK.md  README.md  RELEASE_TORRENT_UPLOAD_FIX.md  SCANNING.md  SECURITY.md  SESSION_REPORT_2026-04-19.md  SYSTEMATIC_DEBUGGING_2026-04-19.md  TESTING.md  TEST_RESULTS.md  TEST_SUITE_GUIDE.md  TOKENS_AND_KEYS.md  USER_MANUAL.md
docs/api/: openapi.json
docs/architecture/: container-topology.mmd  plugin-execution.mmd  private-tracker-bridge.mmd  request-lifecycle.mmd  search-lifecycle.mmd  shutdown-sequence.mmd
docs/demos/: 2026-04-27-boba-jackett-dod-sweep.md  2026-04-27-boba-jackett-static-smoke.md
docs/incidents/: 2026-04-27-perceived-host-suspension-investigation.md
docs/issues/: 001-dashboard-issues-fixed.md  sse-streaming-issues.md
docs/migration/: Migration_Python_Codebase_To_Go.md  PARITY_GAPS.md
download-proxy/: README.md  requirements.txt
download-proxy/src/: README.md  main.py
frontend/: .gitignore  angular.json  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: README.md  credentials.spec.ts  indexers.spec.ts  playwright.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.scss  test-setup.ts
observability/: prometheus.yml
observability/dashboards/: README.md  default.yml  merge-search.json
plugins/: README.md  academictorrents.py  ali213.py  anilibra.py  bitru.py  btsow.py  download_proxy.py  env_loader.py  extratorrent.py  eztv.py  gamestorrents.py  helpers.py  iptorrents.py  jackett.json  kickass.py  kinozal.json  kinozal.py  limetorrents.py  linuxtracker.py  megapeer.py  nnmclub.json  nnmclub.py  nova2.py  novaprinter.py  nyaa.py  one337x.py  pctorrent.py  piratebay.py  rutor.py  rutracker.py  socks.py  solidtorrents.py  theme_injector.py  therarbg.py  tokyotoshokan.py  torlock.py  torrentgalaxy.py  torrentkitty.py  torrentproject.py  xfsub.py  (+2 more)
plugins/community/: README.md  academictorrents.py  anilibra.py  audiobookbay.py  bitru.py  bt4g.py  btsow.py  extratorrent.py  gamestorrents.py  glotorrents.py  jackett.py  linuxtracker.py  megapeer.py  one337x.py  pctorrent.py  pirateiro.py  rockbox.py  snowfl.py  therarbg.py  torlock.py  torrentdownload.py  torrentfunk.py  torrentkitty.py  torrentproject.py  torrentscsv.py  xfsub.py  yihua.py  yourbittorrent.py
plugins/webui_compatible/: kinozal.py  nnmclub.py  rutracker.py
qBitTorrent-go/: .env.example  Dockerfile  Dockerfile.jackett  go.mod  go.sum
qBitTorrent-go/scripts/: build.sh
releases/: README.md
scripts/: README.md  add-submodules.sh  audit-plugins.sh  build-releases.sh  extract-jackett-key.py  freeze-openapi.sh  helixqa.sh  opencode-helixqa.sh  run-tests.sh  scan.sh
specs/: README.md
specs/001-merge-search-trackers/: data-model.md  (+4 more)
tests/: README.md  automated_test.sh  comprehensive_test.py  conftest.py  final_verification.py  novaprinter.py  requirements.txt  run_python_tests.py  run_tests.sh  test_all_magnet_links.py  test_all_plugins.py  test_all_plugins_extended.py  test_columns.py  test_complete.py  test_comprehensive.py  test_continuous_integration.py  test_download_comprehensive.py  test_download_verification.py  test_e2e_download.py  test_full_automation.py  test_full_download_verification.py  test_full_ui.py  test_master_all_plugins.py  test_new_plugins.py  test_playwright_ui.py  test_plugin_download_fix.py  test_plugin_integration.py  test_plugin_unit.py  test_search_results.py  test_torrent_file_upload.py  test_ui_automation.py  test_ui_comprehensive.py  test_ui_download_flow.py  test_webui_automation.py  verify_fix.py
tmp/: README.md  ci_report.html
tools/: README.md  plugin_update_automation.py
(+402 files in other folders)
