# Unified tool config for qBitTorrent-Fixed.
# See docs/superpowers/plans/2026-04-19-completion-initiative.md Phase 0.1.

[project]
name = "qbittorrent-fixed"
version = "0.1.0"
description = "Containerized qBittorrent + multi-tracker merge search with private-tracker authenticated downloads."
requires-python = ">=3.12"

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
asyncio_mode = "auto"
# pytest-asyncio 0.26 uses function-scoped loops by default.
# Class-scoped loops cause collection errors for module-level async
# tests and are only supported when tests live inside a class.
asyncio_default_test_loop_scope = "function"
# Coverage flags moved out of the default `addopts` so
# `pytest tests/unit/foo.py` doesn't fail the 1% `fail_under` gate on
# partial runs. Use `scripts/run-tests.sh` (or pass
# `--cov=download-proxy/src --cov=plugins` explicitly) when you
# actually want coverage. CI is manual — see `CLAUDE.md`.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--timeout=60",
    "--import-mode=importlib",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]
markers = [
    "requires_credentials: test needs real tracker credentials (.env)",
    "requires_compose: test needs the full docker-compose stack up",
    "slow: test takes longer than 1s (opt-in)",
    "stress: high-load stress test (opt-in)",
    "security: security-focused test",
    "contract: API contract test (schemathesis / openapi)",
    "property: property-based (hypothesis) test",
    "memory: memory-leak / tracemalloc test",
    "chaos: chaos/fault-injection test",
    "observability: scrapes prometheus / metrics",
]

[tool.coverage.run]
source = ["download-proxy/src", "plugins"]
branch = true
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "download-proxy/src/ui/*",
    "plugins/webui_compatible/*",
]
parallel = true

[tool.coverage.report]
# `fail_under` is the COVERAGE GATE. It starts at 1 (baseline) and is
# raised per phase as modules reach 100%. See docs/COVERAGE_BASELINE.md.
fail_under = 49
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# ASYNC (flake8-async) rules catch blocking I/O inside async funcs — key
# for Phase 3 concurrency hardening.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC", "S", "PT", "C4", "TID"]
ignore = [
    "E501",      # handled by line-length
    "S101",      # allow assert in tests
    "S603",      # subprocess calls audited in Phase 2 separately
    "S607",      # partial-path exec audited in Phase 2
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", "S106", "PT011",   # existing
    "S112", "S113", "S310", "S108", "S105", "S110", "S324", "S506", "S602", "S605",  # security rules in test code
    "E402", "E712", "E741",     # imports not at top, comparison patterns, ambiguous names
    "RUF002", "RUF005", "RUF059", "RUF015", "RUF021", "RUF013", "RUF012", "RUF100",  # unicode / unused unpacking / implicit optional
    "PT015", "PT017", "PT018", "PT006",  # pytest assertion style
    "F401", "F811", "F821", "F841", "F541",  # unused/undefined in tests
    "B011", "B006", "B007", "B904",  # test-specific patterns
    "SIM102", "SIM105", "SIM108", "SIM113", "SIM117",  # simplification rules in tests
    "I001", "W293", "W292", "W291",  # formatting in tests
    "UP006", "UP031", "UP034", "UP035", "UP041", "UP045",  # upgrade rules in tests
    "C408", "C416", "C417",  # comprehension rules in tests
]
"plugins/**/*.py" = [
    "S", "S324", "S605", "S310",  # security audit handled separately
    "I001", "E401",               # plugin import order is legacy
    "UP004", "UP006", "UP007", "UP008", "UP009", "UP013", "UP018", "UP024",
    "UP030", "UP031", "UP032", "UP034", "UP035", "UP041", "UP045",  # upgrade rules — third-party plugins
    "RUF001", "RUF002", "RUF012", "RUF013", "RUF015", "RUF021", "RUF046", "RUF059", "RUF100",
    "W293", "W291", "W292",
    "E402", "E722",
    "F401", "F811", "F821", "F841", "F541",
    "SIM102", "SIM105", "SIM108", "SIM110", "SIM112", "SIM114", "SIM115", "SIM117", "SIM118", "SIM300",
    "B006", "B007", "B018", "B904", "B905",
    "C401", "C408", "C416", "C417",
    "PT018",
]
"tools/**/*.py" = [
    "S", "S324",  # security audit handled separately
    "I001", "W293", "W291", "W292",
    "RUF001", "RUF013", "RUF012", "RUF059",
    "UP006", "UP035", "UP045", "UP015",
    "E722", "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["api", "merge_service", "config", "plugins"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
pretty = true
show_error_codes = true
# Per-module overrides: plugins/ is legacy, merge_service/ gets strict later
exclude = [
    "^plugins/(?!__init__).*$",
    "^tests/.*$",
    "^download-proxy/src/ui/.*$",
]

[[tool.mypy.overrides]]
module = ["novaprinter", "helpers", "requests.*"]
ignore_missing_imports = true

[tool.mutmut]
paths_to_mutate = "download-proxy/src/"
runner = "pytest -x -q"
tests_dir = "tests/unit"
